--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,3 +1,5 @@
+@use '../core' as *;
+
 @use 'background';
 @use 'border';
 @use 'effects';
@@ -10,14 +12,40 @@
 @use 'visibility';
 
 @mixin utilities {
-  @include background.utilities();
-  @include border.utilities();
-  @include effects.utilities();
-  @include flex.utilities();
-  @include grid.utilities();
-  @include layout.utilities();
-  @include size.utilities();
-  @include spacing.utilities();
-  @include typography.utilities();
-  @include visibility.utilities();
+  // @if config(utilities, animation) {
+  //   @include animation.utilities();
+  // }
+  @if config(utilities, background) {
+    @include background.utilities();
+  }
+  @if config(utilities, border) {
+    @include border.utilities();
+  }
+  @if config(utilities, effects) {
+    @include effects.utilities();
+  }
+  @if config(utilities, flex) {
+    @include flex.utilities();
+  }
+  @if config(utilities, grid) {
+    @include grid.utilities();
+  }
+  @if config(utilities, layout) {
+    @include layout.utilities();
+  }
+  @if config(utilities, size) {
+    @include size.utilities();
+  }
+  @if config(utilities, spacing) {
+    @include spacing.utilities();
+  }
+  // @if config(utilities, transition) {
+  //   @include transition.utilities();
+  // }
+  @if config(utilities, typography) {
+    @include typography.utilities();
+  }
+  @if config(utilities, visibility) {
+    @include visibility.utilities();
+  }
 }
