--- a/dev/assets/scss/_config.scss
+++ b/dev/assets/scss/_config.scss
@@ -21,7 +21,7 @@
       //   7: #0b7a67,
       //   8: #0e6154,
       //   9: #115046,
-      // ),,,
+      // ),,,,,,,
     ),
     font-family: (
       heading: (
