--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -8,7 +8,7 @@
 @use '../core' as *;
 @use 'support';
 
-$utility-classes: (
+$utilities: (
   'rounded': (
     property: border-radius,
     class: rounded,
@@ -79,7 +79,3 @@ $utility-classes: (
     ),
   ),
 );
-
-@mixin utilities {
-  @include generate-utilities($utility-classes);
-}
