--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -19,7 +19,7 @@ body {
 
 h1 {
   @include koi.text-size(4xl);
-  font-family: koi.font-family(serif);
+  font-family: koi.font-family(heading);
   color: koi.accent(5);
   // color: koi.change-alpha(koi.accent(5), 1);
 }
