--- a/dev/assets/scss/_config.scss
+++ b/dev/assets/scss/_config.scss
@@ -10,18 +10,18 @@
   ),
   $theme: (
     colors: (
-      // primary: (
-      //   0: #effef9,
-      //   1: #cafded,
-      //   2: #95fadd,
-      //   3: #58f0ca,
-      //   4: #24d7b0,
-      //   5: #0dbf9b,
-      //   6: #08997f,
-      //   7: #0b7a67,
-      //   8: #0e6154,
-      //   9: #115046,
-      // ),,,,,,,
+      primary: (
+        0: #effef9,
+        1: #cafded,
+        2: #95fadd,
+        3: #58f0ca,
+        4: #24d7b0,
+        5: #0dbf9b,
+        6: #08997f,
+        7: #0b7a67,
+        8: #0e6154,
+        9: #115046,
+      ),
     ),
     font-family: (
       heading: (
